Prevent auto rotate, show reference image on first scan, indicate too close/too far

--- a/src/code/truemed-styles.css
+++ b/src/code/truemed-styles.css
@@ -10,7 +10,12 @@
   #box {
     position: absolute;
     border: 3px solid white;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) rotate(90deg);
+  }
+  #box-img {
+    width: 100%;
+    height: 100%;
+    opacity: 0.25;
   }
   #target-marker {
     position:absolute;
